--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
- <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. </p>
+	<head>
+		
+		<!-- Bootstrap core CSS -->
+		<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="style.css" rel="stylesheet">
+		<title/>
+	</head>
+	<body>
+		<h1>Hello World</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+		<h2>Projects</h2>
+		<ul class="projects">
+		<li></li>
+		</ul>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="app.js"></script>
+	</body>
+	
 </html>
-</body>
