--- a/index.html
+++ b/index.html
@@ -1,21 +1,76 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		
-		<!-- Bootstrap core CSS -->
-		<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
-		<title/>
-	</head>
-	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
-		<h2>Projects</h2>
-		<ul class="projects">
-		<li></li>
-		</ul>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="app.js"></script>
-	</body>
-	
+    <head>
+
+        <!-- Bootstrap core CSS -->
+        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+        <title>my website</title>
+    </head>
+    <body>
+        <div class="header">
+            <div class="container">
+                <a href="#" class="logo-icon">
+                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png">
+                </a>
+                <div class="header">
+                    <div class="container">
+                        <a href="#" class="logo-icon">
+                            <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png">
+                        </a>
+
+                        <ul class="menu">
+                            <li><a href="#">Get the App</a></li>
+                            <li><a href="#">Tutorials</a></li>
+                            <li><a href="#">Magazines</a></li>
+                            <li><a href="#">Web Tools</a></li>
+                            <li><a href="#">Support</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Community</a></li>
+                                    <li><a href="#">Our Blog</a></li>
+                                    <li><a href="#">Maps Blog</a></li>
+                                    <li><a href="#">Eng Blog</a></li>
+                                    <li><a href="#">Advertisers</a></li>
+                                    <li><a href="#">Publishers</a></li>
+                                    <li><a href="#">About Us</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <ul class="menu">
+                    <li><a href="#">Get the App</a></li>
+                    <li><a href="#">Tutorials</a></li>
+                    <li><a href="#">Magazines</a></li>
+                    <li><a href="#">Web Tools</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Community</a></li>
+                            <li><a href="#">Our Blog</a></li>
+                            <li><a href="#">Maps Blog</a></li>
+                            <li><a href="#">Eng Blog</a></li>
+                            <li><a href="#">Advertisers</a></li>
+                            <li><a href="#">Publishers</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+        <h2>Projects</h2>
+        <ul class="projects">
+            <li></li>
+        </ul>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="app.js"></script>
+    </body>
 </html>
