took out repeated code also added to js

--- a/index.html
+++ b/index.html
@@ -10,37 +10,12 @@
     <body>
         <div class="header">
             <div class="container">
-                <a href="#" class="logo-icon">
+<!--                <a href="#" class="logo-icon">
                     <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png">
-                </a>
-                <div class="header">
-                    <div class="container">
-                        <a href="#" class="logo-icon">
-                            <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png">
-                        </a>
+                </a>-->
 
-                        <ul class="menu">
-                            <li><a href="#">Get the App</a></li>
-                            <li><a href="#">Tutorials</a></li>
-                            <li><a href="#">Magazines</a></li>
-                            <li><a href="#">Web Tools</a></li>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Community</a></li>
-                                    <li><a href="#">Our Blog</a></li>
-                                    <li><a href="#">Maps Blog</a></li>
-                                    <li><a href="#">Eng Blog</a></li>
-                                    <li><a href="#">Advertisers</a></li>
-                                    <li><a href="#">Publishers</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
+
                 <ul class="menu">
                     <li><a href="#">Get the App</a></li>
                     <li><a href="#">Tutorials</a></li>
@@ -51,19 +26,13 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Community</a></li>
-                            <li><a href="#">Our Blog</a></li>
-                            <li><a href="#">Maps Blog</a></li>
-                            <li><a href="#">Eng Blog</a></li>
-                            <li><a href="#">Advertisers</a></li>
-                            <li><a href="#">Publishers</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">About Me</a></li>
+                            <li><a href="projects">Projects</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
         <h2>Projects</h2>
