fixed to script.js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <body>
         <div class="header">
             <div class="container">
-<!--                <a href="#" class="logo-icon">
-                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png">
-                </a>-->
+
 
 
 
@@ -40,6 +38,6 @@
             <li></li>
         </ul>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="app.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
