--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!-- Bootstrap core CSS -->
         <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <title>my website</title>
+        <title>Website</title>
     </head>
     <body>
         <div class="header">
@@ -15,25 +15,18 @@
 
 
                 <ul class="menu">
-                    <li><a href="#">Get the App</a></li>
-                    <li><a href="#">Tutorials</a></li>
-                    <li><a href="#">Magazines</a></li>
-                    <li><a href="#">Web Tools</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Careers</a></li>
+                    <li><a href="about_me">About Me</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
+                        <a href="projects" class="dropdown-toggle">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">About Me</a></li>
-                            <li><a href="projects">Projects</a></li>
+                            <li><a href="projects">Brick Breaker</a></li>
+                            <li><a href="projects">Google Maps Integrator</a></li>
+                            <li><a href="projects">Final Project: Simmer</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-        <h2>Projects</h2>
         <ul class="projects">
             <li></li>
         </ul>
@@ -43,15 +36,9 @@
         <div class="container">
           <div class="row">
             <div class="slide-copy col-xs-5">
-              <h1>Flipboard Is Your Personal Magazine</h1>
+              <h1>Project 1</h1>
               <p>It's a single place to discover, collect and share the news you care about.  Add your favorite social networks, publications and blogs to stay connected to the topics and people closest to you.</p>
               
-              <ul class="get-app">
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
-              </ul>
             </div>
             <div class="slide-img col-xs-7">
               <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/home.png" width="540px">
