fixed forward arror

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <ul class="menu">
                     <li><a href="about_me">About Me</a></li>
                     <li class="dropdown">
-                        <a href="projects" class="dropdown-toggle">Projects<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="projects">All Projects</a></li>
                             <li><a href="projects">Brick Breaker</a></li>
                             <li><a href="projects">Google Maps Integrator</a></li>
                             <li><a href="projects">Final Project: Simmer</a></li>
