added pic hopefully fixed unsorted list for index

--- a/about_me.html
+++ b/about_me.html
@@ -6,11 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
+
+        <!-- Bootstrap core CSS -->
+        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <title>About me</title>
-        <meta charset="windows-1252">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
     <body>
-        <div>TODO write content</div>
-    </body>
+        <div class="container">This is a website about me!</div>
+        <img src="Willie_Jin.jpg" alt="Willie Jin">
 </html>
