--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-                <ul class="menu">
+                <div class="menu">
                     <li><a href="about_me">About Me</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">Projects<b class="caret"></b></a>
@@ -25,12 +25,9 @@
                             <li><a href="projects">Final Project: Simmer</a></li>
                         </ul>
                     </li>
-                </ul>
+                </div>
             </div>
         </div>
-        <ul class="projects">
-            <li></li>
-        </ul>
         <div class="slider">
 
       <div class="slide active-slide">
@@ -101,7 +98,7 @@
     </div>
 
     <div class="slider-nav">
-      <a href="#" class="arrow-prev"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
+  <a href="#" class="arrow-prev"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
       <ul class="slider-dots">
         <li class="dot active-dot">&bull;</li>
         <li class="dot">&bull;</li>
