--- a/about_me.html
+++ b/about_me.html
@@ -13,5 +13,5 @@ and open the template in the editor.
         <title>About me</title>
     <body>
         <div class="container">This is a website about me!</div>
-        <img src="Willie_Jin.jpg" alt="Willie Jin">
+        <img src="Willie_Jin.jpg" alt="Willie Jin" width="200px">
 </html>
