--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <div class="container">
           <div class="row">
             <div class="slide-copy col-xs-5">
-              <h1>Enjoy Flipboard Magazines</h1>
-              <h2>on the Web</h2>
+              <h2>Project 2</h2>
               <p>Millions of people use Flipboard to read and collect the news they care about, curating their favorite stories into their own magazines on any topic imaginable. Now magazines created by our readers, from Dali to End Trafficking, can be shared and enjoyed on the Web by anyone, anywhere.</p>
               
             </div>
@@ -78,15 +77,9 @@
         <div class="container">
           <div class="row">
             <div class="slide-copy col-xs-5">
-              <h1>Badges & Widgets</h1>
+                <h2>Project 3</h2>
               <p>Millions of people use Flipboard to read and collect the news they care about, curating their favorite stories into their own magazines. Now you can promote the ones you create or think are awesome.</p>
               
-              <ul class="get-app">
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
-                <li><a href="#"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
-              </ul>
             </div>
             <div class="slide-img col-xs-7">
               <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/bw.png" width="540px">
